Fixed scroll down arrow being off centered

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -14,7 +14,7 @@
     animation-iteration-count: infinite;
     position: relative;
     bottom: 30px;
-    left: 45vw;
+    left: 50vw;
 }
 .downarrowbtn{
     display: flex;
